<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyQuitti</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="take">2. Take Receipt</string>
    <string name="list">Browse Receipts</string>
    <string name="category">1. Choose a Category</string>
    <string name="desc">Simple camera app</string>
    <string name="title_activity_my_quitti_camera">MyQuittiCameraActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
	<string name="no_category_text">No category set</string>
	<string name="logo">This is a logo</string>
	
	<string name="menu_add_category">Add categories</string>
	<string name="menu_remove_category">Remove categories</string>
	
	<string name="add_category">Add category:</string>
	<string name="add_category_button">Add</string>
	<string name="add_category_added">Added categories:</string>
	
    <string name="category_prompt">Choose a category</string>
 
    <string-array name="categories">
        <item>Business trip</item>
        <item>Holiday</item>
        <item>Home</item>
        <item>Car</item>
       
    </string-array>
    
    <string name="deletebutton">Delete selected</string>
    <string name="sort">Sort</string>
    <string name="category_text">Category</string>
    <string name="date_text">Date</string>
    <string name="checkbox">CheckBoxTEST</string>
    <string name="imagelistcheckbox"></string>
</resources>
