<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_list_extend"
    android:layout_width="fill_parent"
    android:layout_height="150dp"
    android:orientation="vertical"
    android:padding="2dp" >

    <ImageView
        android:id="@+id/grid_item_image"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/desc"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <CheckBox
        android:id="@+id/grid_item_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:button="@drawable/custom_checkbox"
        android:text="@string/imagelistcheckbox" />

    <FrameLayout
        android:id="@+id/textcontainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#99a8b3b9" >

        <TextView
            android:id="@+id/grid_item_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:text="@string/category_text"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />
    </FrameLayout>

</RelativeLayout>